# wasi-clippy

./: Cargo.toml  README.md
src/: bindings.rs  lib.rs
